SF-1557b Prevent scrollbar in share dialog on mobile (#1348)
This was broken in #1342 "SF-1557 Fix share dialog menus appearing
behind dialog" (cb494c620519e0bcc6313166558976db71b38f11)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/shared/share/share-dialog.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/shared/share/share-dialog.component.scss
@@ -1,3 +1,7 @@
-.mat-dialog-content {
+// Note: ViewEncapsulation is disabled for this file, so all styles can apply to any element globally
+
+.share-dialog-component-panel {
   width: 30em;
+  // Angular Material sets max-width on the element itself, so this is the only way to override in CSS
+  max-width: 90vw !important;
 }
